fix broken css links on deployments

--- a/src/assets/css/itcss.css
+++ b/src/assets/css/itcss.css
@@ -244,7 +244,7 @@ dd {
  */
 
 html {
-  font-size: 1rem; /* [1] */
+  font-size: 16px; /* [1] */
   line-height: var(--globalLineHeight); /* [1] */
   overflow-y: scroll; /* [2] */
   min-height: 100%; /* [3] */
